--- a/html/contact.html
+++ b/html/contact.html
@@ -1,11 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
-</head>
-<body>
-    
-</body>
+
+    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    >
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="../index.html" aria-label="Home">
+          <img
+            src="/assets/images/logo.webp"
+            alt="Logo with no Image"
+            class="logo"
+          >
+        </a>
+
+        <button
+          class="menutoggle"
+          onclick="toggleMenu();"
+          tabindex="0"
+          aria-label="Toggle Menu"
+        >
+          <i class="fa-solid fa-bars"></i>
+          <i class="fa-solid fa-x"></i>
+        </button>
+        <ul class="hambuger-navigation">
+          <li tabindex="0">
+            <a href="../index.html" aria-label="Home">Home</a>
+          </li>
+          <li tabindex="0">
+            <a href="about.html" aria-label="About">About</a>
+          </li>
+          <li tabindex="0">
+            <a href="case-studies.html" aria-label="Case Studies"
+              >Case Studies</a
+            >
+          </li>
+          <li tabindex="0">
+            <a href="contact.html" aria-label="Contact">Contact</a>
+          </li>
+          <li tabindex="0">
+            <a href="#" aria-label="Blog">Blog</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <div class="main-content contact">
+      <section class="one">
+        <h1>Find me on:</h1>
+        <div class="socials">
+            <a
+              href="https://github.com/simworld"
+              target="_blank"
+              aria-label="Github"
+              tabindex="0"
+              ><i class="fa-brands fa-github fa-3x"></i
+            ></a>
+            <a
+              href=""
+              target="_blank"
+              aria-label="Whatsapp"
+              tabindex="0"
+            ><i class="fa-brands fa-whatsapp fa-3x"></i
+            ></a>
+            <a
+              href="https://t.me/dyl4nd0g"
+              target="_blank"
+              aria-label="Telegram"
+              tabindex="0"
+              ><i class="fa-brands fa-telegram fa-3x"></i
+            ></a>
+            <a
+              href="https://twitter.com/mastrusimuni"
+              target="_blank"
+              aria-label="Twitter"
+              tabindex="0"
+              ><i class="fa-brands fa-twitter fa-3x"></i
+            ></a>
+            <a
+              href="https://ie.linkedin.com/in/simonesusino"
+              target="_blank"
+              aria-label="Linkedin"
+              tabindex="0"
+              ><i class="fa-brands fa-linkedin-in fa-3x"></i>
+            </a>
+          </div>
+        <!-- <p>with a passion for creating beautiful and interactive websites.</p> -->
+      </section>
+<!-- 
+      <section class="two">
+        <img src="/assets/images/stencil-orange.png" alt="Me" />
+      </section> -->
+
+      <section class="three">
+        <h2>Send me a message!</h2>
+        <div class="form">
+          <div class="form-wrapper">
+            <form
+              action="../form-handler.php"
+              method="POST"
+              aria-label="Contact form"
+            >
+              <label for="name">Name</label>
+              <input
+                type="text"
+                id="name"
+                name="firstname"
+                placeholder="Your name.."
+              >
+
+              <label for="email">Email</label>
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Your email.."
+              >
+
+              <label for="phone">Phone</label>
+              <input
+                type="tel"
+                id="phone"
+                name="phone"
+                placeholder="Your Phone.."
+              >
+
+              <label for="message">Your Message</label>
+              <textarea
+                id="message"
+                name="message"
+                placeholder="Please write your message.."
+                style="height: 200px"
+              ></textarea>
+
+              <button
+                class="submit-btn"
+                type="submit"
+                aria-label="Send a Message"
+              >
+                Send
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!-- <script src="/assets/js/fade.js"></script> -->
+    <script src="/assets/js/hambuger.js"></script>
+  </body>
 </html>
