--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
   </head>
-  <body>
+  <body id="home">
     <div class="main-content">
       <div class="navigation">
         <ul>
@@ -18,6 +18,8 @@
           </li>
           <li class="nav-item three">
             Simone
+          </li>
+          <li class="nav-item four">
           </li>
         </ul>
       </div>
