--- a/html/about.html
+++ b/html/about.html
@@ -5,25 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
     <header>
-      <div class="go-back">
-        <a href="/index.html"
-          ><span class="dots">..</span><span class="slash">/</span>sim</a
+      <nav>
+        <a href="../index.html" aria-label="Home">
+          <img
+            src="/assets/images/logo.webp"
+            alt="Logo with no Image"
+            class="logo"
+          >
+        </a>
+
+        <button
+          class="menutoggle"
+          onclick="toggleMenu();"
+          tabindex="0"
+          aria-label="Toggle Menu"
         >
-      </div>
+          <i class="fa-solid fa-bars"></i>
+          <i class="fa-solid fa-x"></i>
+        </button>
+        <ul class="hambuger-navigation">
+          <li tabindex="0">
+            <a href="../index.html" aria-label="Home">Home</a>
+          </li>
+          <li tabindex="0">
+            <a href="about.html" aria-label="About">About</a>
+          </li>
+          <li tabindex="0">
+            <a href="case-studies.html" aria-label="Case Studies"
+              >Case Studies</a
+            >
+          </li>
+          <li tabindex="0">
+            <a href="contact.html" aria-label="Contact">Contact</a>
+          </li>
+          <li tabindex="0">
+            <a href="#" aria-label="Blog">Blog</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
-    <div class="about-content">
+    <div class="main-content about">
       <section class="one">
         <h1>I am a Frontend Web Developer</h1>
         <p>with a passion for creating beautiful and interactive websites.</p>
+        <!-- <img src="/assets/images/about/IMG_0168.png" alt="Me" style="width: 100%;" /> -->
       </section>
 
-      <section class="two">
+      <!-- <section class="two">
         <img src="/assets/images/stencil-orange.png" alt="Me" />
-      </section>
+      </section> -->
 
       <section class="three">
         <h2>About Me</h2>
@@ -56,6 +94,8 @@
       </section>
     </div>
 
-    <script src="/assets/js/about.js"></script>
+    <!-- <script src="/assets/js/go-back.js"></script> -->
+    <script src="/assets/js/hambuger.js"></script>
+    <script src="/assets/js/fade.js"></script>
   </body>
 </html>
