--- a/html/about.html
+++ b/html/about.html
@@ -13,13 +13,16 @@
   <body>
     <header>
       <nav>
-        <a href="../index.html" aria-label="Home">
-          <img
-            src="/assets/images/logo.webp"
-            alt="Logo with no Image"
-            class="logo"
-          >
-        </a>
+        <div class="logo-container">
+          <a href="../index.html" aria-label="Home">
+            <img
+              src="/assets/images/logo.webp"
+              alt="Logo with no Image"
+              class="logo"
+            >
+          </a>
+        </div>
+
 
         <button
           class="menutoggle"
@@ -56,12 +59,11 @@
       <section class="one">
         <h1>I am a Frontend Web Developer</h1>
         <p>with a passion for creating beautiful and interactive websites.</p>
-        <!-- <img src="/assets/images/about/IMG_0168.png" alt="Me" style="width: 100%;" /> -->
       </section>
 
-      <!-- <section class="two">
-        <img src="/assets/images/stencil-orange.png" alt="Me" />
-      </section> -->
+      <section class="two about image">
+        <img src="/assets/images/about/stencil.webp" alt="Me"/>
+      </section>
 
       <section class="three">
         <h2>About Me</h2>
