--- a/html/contact.html
+++ b/html/contact.html
@@ -14,13 +14,16 @@
   <body>
     <header>
       <nav>
-        <a href="../index.html" aria-label="Home">
-          <img
-            src="/assets/images/logo.webp"
-            alt="Logo with no Image"
-            class="logo"
-          >
-        </a>
+        <div class="logo-container">
+          <a href="../index.html" aria-label="Home">
+            <img
+              src="/assets/images/logo.webp"
+              alt="Logo with no Image"
+              class="logo"
+            >
+          </a>
+        </div>
+
 
         <button
           class="menutoggle"
@@ -64,13 +67,13 @@
               tabindex="0"
               ><i class="fa-brands fa-github fa-3x"></i
             ></a>
-            <a
+            <!-- <a
               href=""
               target="_blank"
               aria-label="Whatsapp"
               tabindex="0"
             ><i class="fa-brands fa-whatsapp fa-3x"></i
-            ></a>
+            ></a> -->
             <a
               href="https://t.me/dyl4nd0g"
               target="_blank"
@@ -145,7 +148,7 @@
                 class="submit-btn"
                 type="submit"
                 aria-label="Send a Message"
-              >
+              ><i class="fa-solid fa-paper-plane"></i>
                 Send
               </button>
             </form>
@@ -154,7 +157,7 @@
       </section>
     </div>
 
-    <!-- <script src="/assets/js/fade.js"></script> -->
+    <script src="/assets/js/fade.js"></script>
     <script src="/assets/js/hambuger.js"></script>
   </body>
 </html>
