--- a/html/dimos.html
+++ b/html/dimos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DiMOS - Case Study One</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
-        <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
@@ -13,13 +13,15 @@
   <body>
     <header>
       <nav>
-        <a href="../index.html" aria-label="Home">
-          <img
-            src="/assets/images/logo.webp"
-            alt="Logo with no Image"
-            class="logo"
-          >
-        </a>
+        <div class="logo-container">
+          <a href="../index.html" aria-label="Home">
+            <img
+              src="/assets/images/logo.webp"
+              alt="Logo with no Image"
+              class="logo"
+            />
+          </a>
+        </div>
 
         <button
           class="menutoggle"
@@ -60,47 +62,101 @@
       </section>
 
       <section class="two dimos image">
-        <img src="/assets/images/dimos/dimos-iphone-oblique.webp" alt="DiMOS" />
+        <img src="/assets/images/dimos/dimos-overview-devices-no-logo.webp" alt="DiMOS" />
       </section>
 
       <section class="three">
         <h2>Overview</h2>
         <p>
-          The Kitchen Display System and Digital Menu project aims to
-          revolutionize the order management process in small restaurants. By
-          developing a user-friendly interface and incorporating real-time
-          updates, the system seeks to replace traditional paper tickets,
-          eliminate human errors, and provide data insights for efficient
-          decision-making. This case study presents the project's approach, the
-          achieved results, and the overall conclusion.
+          The Digital Menu Ordering System project aims to revolutionize the
+          order management process in small restaurants. By developing a
+          user-friendly interface and incorporating real-time updates, the
+          system seeks to replace traditional paper tickets, eliminate human
+          errors, and provide data insights for efficient decision-making. This
+          case study presents the project's approach, the achieved results, and
+          the overall conclusion.
+        </p>
+
+        <div class="section-image image">
+          <img
+            src="/assets/images/dimos/iPadMini-dimos.webp"
+            alt="DiMOS on iPad Mini "
+          />
+        </div>
+
+        <h3>Project Background</h3>
+        <p>
+          Restaurants nowadays, especially in large and busy metropolitan areas,
+          need to serve food to large number of people in short time frame,
+          leaving the customer satisfied not only with the quality of the food
+          but also for the quality of the service. For small businesses is
+          essential to save costs maintaining the same service quality otherwise
+          they cannot survive or compete with large restaurants chains. The aim
+          is to create an affordable application that can enhance the
+          competitiveness of restaurant owners while minimizing costs. DiMOS
+          helps restaurant owners to reduce the workload of their staff and
+          minimize order errors by automating the order-taking process. This
+          eliminates the need for servers to manually write down orders and
+          reduces the likelihood of misheard, misunderstood, or lost orders.
+        </p>
+
+        <div class="section-image image">
+          <img
+            src="/assets/images/dimos/iphone14-dimos.webp"
+            alt="DiMOS on iPad Mini "
+          />
+        </div>
+
+        <p>
+          The increased efficiency of the ordering process, facilitated by the
+          app, enables customers to place orders directly from their table,
+          reducing the amount of time servers spend walking back and forth
+          between tables. As a result, restaurants can serve more guests in less
+          time, leading to increased revenue. A well designed and user-friendly
+          web application can enhance the customer experience and satisfaction.
+          DiMOS provides a great customer experience, that can lead to increased
+          customer loyalty and positive word-of-mouth marketing. DiMOS requires
+          only a wireless internet connection and a few touchscreen devices,
+          such as an iPad, tablet, or smartphone, reducing equipment costs and
+          the need for expensive point-of-sale systems or other equipment.
         </p>
 
         <h3>Approach</h3>
         <p>
           To create the Kitchen Display System and Digital Menu, a monolithic
-          architecture was adopted to ensure simplicity in development and
-          deployment. The system's frontend was built using HTML, CSS, and
-          JavaScript, with EJS as the templating engine for dynamic content.
+          architecture was adopted with an MVC (Model-View-Controller) design
+          pattern. This design approach helps ensure simplicity in development
+          and deployment while structuring the application in a modular and
+          organized manner.
         </p>
 
         <div class="section-image image">
-
-          <!-- <img src="/assets/images/dimos/dimos-ipad-horizontal.webp" alt=""> -->
-          <img src="/assets/images/dimos/system-architecture.webp" alt="DiMOS - System Architecture" />
-
-
+          <img
+            src="/assets/images/dimos/MVC.webp"
+            alt="DiMOS - Model-View-Controller"
+          />
         </div>
 
         <p>
-          On the backend, Node.js and Express.js were chosen to develop a
-          scalable and efficient web application. Role-based access control was
-          implemented to manage user roles, granting specific permissions based
-          on the tasks they needed to perform. The integration of Socket.io
-          facilitated real-time communication, enabling order status updates for
-          both customers and kitchen staff.
+          The system's frontend was built using HTML, CSS, and JavaScript, with
+          EJS as the templating engine for dynamic content. On the backend,
+          Node.js and Express.js were chosen to develop a scalable and efficient
+          web application. 
         </p>
 
+        <div class="section-image image">
+          <img
+            src="/assets/images/dimos/system-architecture.webp"
+            alt="DiMOS - System Architecture"
+          />
+        </div>
+
         <p>
+          Role-based access control was implemented to manage
+          user roles, granting specific permissions based on the tasks they
+          needed to perform. The integration of Socket.io facilitated real-time
+          communication, enabling order status updates for both customers and
+          kitchen staff.
           The project relied on MongoDB Atlas, a cloud-based database, to store
           data efficiently. Passwords were encrypted using Bcrypt.js to enhance
           data security.
@@ -112,11 +168,19 @@
           objectives. Customers can now browse the digital menu, select their
           desired meals, and place orders with ease. The menu management feature
           allows kitchen staff to efficiently add, edit, or delete dishes.
-          Real-time updates on order status have significantly improved the
+          Real-time updates on order status can make a significant improvement in the
           order management process. Additionally, the data insights dashboard
           provides valuable information on popular items, sales trends, and
           customer preferences.
         </p>
+
+        <div class="section-image image">
+          <img
+            src="/assets/images/dimos/iphone12-dimos.webp"
+            alt="DiMOS on iPhone 12"
+          />
+        </div>
+
         <p>
           User feedback during the first release was instrumental in making
           several improvements to the application. Merging the menu and cart
@@ -138,6 +202,13 @@
           potential to transform the restaurant industry and modernize the
           dining experience.
         </p>
+
+        <div class="section-image image">
+          <img
+            src="/assets/images/dimos/dimos-overview-devices.webp"
+            alt="DiMOS Devices"
+          />
+        </div>
       </section>
     </div>
 
