--- a/html/case-studies.html
+++ b/html/case-studies.html
@@ -13,13 +13,16 @@
   <body>
     <header>
       <nav>
-        <a href="../index.html" aria-label="Home">
-          <img
-            src="/assets/images/logo.webp"
-            alt="Logo with no Image"
-            class="logo"
-          >
-        </a>
+        <div class="logo-container">
+          <a href="../index.html" aria-label="Home">
+            <img
+              src="/assets/images/logo.webp"
+              alt="Logo with no Image"
+              class="logo"
+            >
+          </a>
+        </div>
+
 
         <button
           class="menutoggle"
@@ -51,7 +54,6 @@
         </ul>
       </nav>
     </header>
-
       
     <div class="main-content case-studies">
       <div class="navigation">
