--- a/html/about.html
+++ b/html/about.html
@@ -33,20 +33,20 @@
           <i class="fa-solid fa-bars"></i>
           <i class="fa-solid fa-x"></i>
         </button>
-        <ul class="hambuger-navigation">
+        <ul class="hamburger-navigation">
           <li tabindex="0">
             <a href="../index.html" aria-label="Home">Home</a>
           </li>
           <li tabindex="0">
-            <a href="about.html" aria-label="About">About</a>
+            <a href="/html/about.html" aria-label="About">About</a>
           </li>
           <li tabindex="0">
-            <a href="case-studies.html" aria-label="Case Studies"
-              >Case Studies</a
+            <a href="/html/works.html" aria-label="Works"
+              >Works</a
             >
           </li>
           <li tabindex="0">
-            <a href="contact.html" aria-label="Contact">Contact</a>
+            <a href="/html/contact.html" aria-label="Contact">Contact</a>
           </li>
           <li tabindex="0">
             <a href="#" aria-label="Blog">Blog</a>
@@ -97,7 +97,9 @@
     </div>
 
     <!-- <script src="/assets/js/go-back.js"></script> -->
-    <script src="/assets/js/hambuger.js"></script>
+    <script src="/assets/js/hamburger.js"></script>
     <script src="/assets/js/fade.js"></script>
+    <script src="/assets/js/current-page.js"></script>
+
   </body>
 </html>
