--- a/html/works.html
+++ b/html/works.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Case Studies </title>
+    <title>Works </title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link
     rel="stylesheet"
@@ -33,20 +33,20 @@
           <i class="fa-solid fa-bars"></i>
           <i class="fa-solid fa-x"></i>
         </button>
-        <ul class="hambuger-navigation">
+        <ul class="hamburger-navigation">
           <li tabindex="0">
             <a href="../index.html" aria-label="Home">Home</a>
           </li>
           <li tabindex="0">
-            <a href="about.html" aria-label="About">About</a>
+            <a href="/html/about.html" aria-label="About">About</a>
           </li>
           <li tabindex="0">
-            <a href="case-studies.html" aria-label="Case Studies"
-              >Case Studies</a
+            <a href="/html/works.html" aria-label="Works"
+              >Works</a
             >
           </li>
           <li tabindex="0">
-            <a href="contact.html" aria-label="Contact">Contact</a>
+            <a href="/html/contact.html" aria-label="Contact">Contact</a>
           </li>
           <li tabindex="0">
             <a href="#" aria-label="Blog">Blog</a>
@@ -59,11 +59,11 @@
       <div class="navigation">
         <ul>
           <li class="nav-item one case-studies">
-            <a href="/html/dimos.html">DiMOS</a>
+            <a href="/html/works/dimos.html">DiMOS</a>
             <p class="subtitle">A Digital Menu Ordering System</p> 
           </li>
           <li class="nav-item two case-studies">
-            <a href="/html/case-two.html">The Butterfly</a>
+            <a href="/html/works/butterfly.html">The Butterfly</a>
             <p class="subtitle">A modern website for a Childcare business</p> 
           </li>
           <!-- <li class="nav-item three">
@@ -74,6 +74,8 @@
     </div>
 
     <!-- <script src="/assets/js/fade.js"></script> -->
-    <script src="/assets/js/hambuger.js"></script>
+    <script src="/assets/js/hamburger.js"></script>
+    <script src="/assets/js/current-page.js"></script>
+
   </body>
 </html>
