--- a/html/works/dimos.html
+++ b/html/works/dimos.html
@@ -14,14 +14,15 @@
     <header>
       <nav>
         <div class="logo-container">
-          <a href="../index.html" aria-label="Home">
+          <a href="../../index.html" aria-label="Home">
             <img
               src="/assets/images/logo.webp"
               alt="Logo with no Image"
               class="logo"
-            />
+            >
           </a>
         </div>
+
 
         <button
           class="menutoggle"
@@ -32,20 +33,20 @@
           <i class="fa-solid fa-bars"></i>
           <i class="fa-solid fa-x"></i>
         </button>
-        <ul class="hambuger-navigation">
+        <ul class="hamburger-navigation">
           <li tabindex="0">
-            <a href="../index.html" aria-label="Home">Home</a>
+            <a href="../../index.html" aria-label="Home">Home</a>
           </li>
           <li tabindex="0">
-            <a href="about.html" aria-label="About">About</a>
+            <a href="/html/about.html" aria-label="About">About</a>
           </li>
           <li tabindex="0">
-            <a href="case-studies.html" aria-label="Case Studies"
-              >Case Studies</a
+            <a href="/html/works.html" aria-label="Works"
+              >Works</a
             >
           </li>
           <li tabindex="0">
-            <a href="contact.html" aria-label="Contact">Contact</a>
+            <a href="/html/contact.html" aria-label="Contact">Contact</a>
           </li>
           <li tabindex="0">
             <a href="#" aria-label="Blog">Blog</a>
@@ -203,16 +204,22 @@
           dining experience.
         </p>
 
+
         <div class="section-image image">
           <img
             src="/assets/images/dimos/dimos-overview-devices.webp"
             alt="DiMOS Devices"
           />
         </div>
+
+        <p style="font-weight: bolder;">Demo availalbe at: <a href="http://dimos.azurewebsites.net" target="_blank">DiMOS on Azure</a></p>
+
       </section>
     </div>
 
-    <script src="/assets/js/hambuger.js"></script>
+    <script src="/assets/js/hamburger.js"></script>
     <script src="/assets/js/fade.js"></script>
+    <script src="/assets/js/current-page.js"></script>
+
   </body>
 </html>
