--- a/html/404.html
+++ b/html/404.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Works </title>
+    <title>404</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
     <header>
@@ -19,10 +19,9 @@
               src="/assets/images/logo.webp"
               alt="Logo with no Image"
               class="logo"
-            >
+            />
           </a>
         </div>
-
 
         <button
           class="menutoggle"
@@ -41,9 +40,7 @@
             <a href="/html/about.html" aria-label="About">About</a>
           </li>
           <li tabindex="0">
-            <a href="/html/works.html" aria-label="Works"
-              >Works</a
-            >
+            <a href="/html/works.html" aria-label="Works">Works</a>
           </li>
           <li tabindex="0">
             <a href="/html/contact.html" aria-label="Contact">Contact</a>
@@ -56,29 +53,19 @@
       <div class="progress-bar"></div>
 
     </header>
-      
-    <div class="main-content works">
-      <div class="navigation">
-        <ul>
-          <li class="nav-item one works">
-            <a href="/html/works/dimos.html">DiMOS</a>
-            <p class="subtitle">A Digital Menu Ordering System</p> 
-          </li>
-          <li class="nav-item two works">
-            <a href="/html/works/butterfly.html">The Butterfly</a>
-            <p class="subtitle">A modern website for a Childcare business</p> 
-          </li>
-          <!-- <li class="nav-item three">
-            Simone
-          </li> -->
-        </ul>
-      </div>
+
+    <div class="main-content about">
+      <section class="one">
+        <h1>Oops! You're Lost in Cyberspace</h1>
+        <p>
+          The page you're looking for seems to have vanished into the digital
+          abyss.
+        </p>
+        <p>How about heading back to our <a href="../index.html">homepage</a>?</p>
+      </section>
     </div>
 
-    <!-- <script src="/assets/js/fade.js"></script> -->
     <script src="/assets/js/hamburger.js"></script>
-    <script src="/assets/js/current-page.js"></script>
-    <script src="/assets/js/progress-bar.js"></script>
-
+    <script src="/assets/js/fade.js"></script>
   </body>
 </html>
