--- a/html/about.html
+++ b/html/about.html
@@ -53,6 +53,8 @@
           </li>
         </ul>
       </nav>
+      <div class="progress-bar"></div>
+
     </header>
 
     <div class="main-content about">
@@ -100,6 +102,8 @@
     <script src="/assets/js/hamburger.js"></script>
     <script src="/assets/js/fade.js"></script>
     <script src="/assets/js/current-page.js"></script>
+    <script src="/assets/js/progress-bar.js"></script>
+
 
   </body>
 </html>
