--- a/html/contact.html
+++ b/html/contact.html
@@ -54,6 +54,8 @@
           </li>
         </ul>
       </nav>
+      <div class="progress-bar"></div>
+
     </header>
 
     <div class="main-content contact">
@@ -99,13 +101,17 @@
         <!-- <p>with a passion for creating beautiful and interactive websites.</p> -->
       </section>
 
-      <!-- <section class="two about image">
-        <img src="/assets/images/about/stencil.webp" alt="Me"/>
-      </section> -->
+      <section class="two contact">
+        <h2>Thanks for visit my website!</h2>
+        <p>Feel free to send me a message!</p>
+        <!-- <img src="/assets/images/about/stencil.webp" alt="Me"/> -->
+        <!-- <img src="/assets/images/logo.webp" alt="Me"/> -->
+
+      </section>
 
 
       <section class="three">
-        <h2>Send me a message!</h2>
+        <!-- <h2>Send me a message!</h2> -->
         <div class="form">
           <div class="form-wrapper">
             <form
@@ -113,7 +119,7 @@
               method="POST"
               aria-label="Contact form"
             >
-              <label for="name">Name</label>
+              <label for="name"><i class="fa-solid fa-user"></i> Name</label>
               <input
                 type="text"
                 id="name"
@@ -121,7 +127,7 @@
                 placeholder="Your name.."
               >
 
-              <label for="email">Email</label>
+              <label for="email"><i class="fa-solid fa-envelope"></i> Email</label>
               <input
               type="email"
               id="email"
@@ -131,7 +137,7 @@
               required
               >
 
-              <label for="phone">Phone</label>
+              <label for="phone"><i class="fa-solid fa-phone"></i> Phone</label>
               <input
                 type="tel"
                 id="phone"
@@ -139,7 +145,7 @@
                 placeholder="Your Phone.."
               >
 
-              <label for="message">Your Message</label>
+              <label for="message"><i class="fa-solid fa-message"></i> Your Message</label>
               <textarea
                 id="message"
                 name="message"
@@ -163,6 +169,8 @@
     <script src="/assets/js/fade.js"></script>
     <script src="/assets/js/hamburger.js"></script>
     <script src="/assets/js/current-page.js"></script>
+    <script src="/assets/js/progress-bar.js"></script>
+
 
   </body>
 </html>
