--- a/html/works/dimos.html
+++ b/html/works/dimos.html
@@ -51,7 +51,6 @@
         </ul>
       </nav>
       <div class="progress-bar"></div>
-
     </header>
 
     <div class="main-content works-content">
@@ -92,15 +91,18 @@
           Restaurants nowadays, especially in large and busy metropolitan areas,
           need to serve food to large number of people in short time frame,
           leaving the customer satisfied not only with the quality of the food
-          but also for the quality of the service. For small businesses is
-          essential to save costs maintaining the same service quality otherwise
-          they cannot survive or compete with large restaurants chains. The aim
-          is to create an affordable application that can enhance the
-          competitiveness of restaurant owners while minimizing costs. DiMOS
-          helps restaurant owners to reduce the workload of their staff and
-          minimize order errors by automating the order-taking process. This
-          eliminates the need for servers to manually write down orders and
-          reduces the likelihood of misheard, misunderstood, or lost orders.
+          but also for the quality of the service.
+        </p>
+        <p>
+          For small businesses is essential to save costs maintaining the same
+          service quality otherwise they cannot survive or compete with large
+          restaurants chains. The aim is to create an affordable application
+          that can enhance the competitiveness of restaurant owners while
+          minimizing costs. DiMOS helps restaurant owners to reduce the workload
+          of their staff and minimize order errors by automating the
+          order-taking process. This eliminates the need for servers to manually
+          write down orders and reduces the likelihood of misheard,
+          misunderstood, or lost orders.
         </p>
 
         <div class="section-image image">
