--- a/html/about.html
+++ b/html/about.html
@@ -85,7 +85,7 @@
           development.
         </p>
 
-        <h3>Technolgies and Languages</h3>
+        <h3>Technologies and Languages</h3>
         <p>
           As a web developer, I thrive on staying up-to-date with the latest
           advancements in the industry. I have hands-on experience with a range
