--- a/html/about.html
+++ b/html/about.html
@@ -58,7 +58,7 @@
     </header>
 
     <div class="main-content about">
-      <section class="one">
+      <section class="one about">
         <h1>I am a Frontend Web Developer</h1>
         <p>with a passion for creating beautiful and interactive websites.</p>
       </section>
