--- a/html/contact.html
+++ b/html/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link
     rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     >
   </head>
   <body>
@@ -69,6 +69,13 @@
               tabindex="0"
               ><i class="fa-brands fa-github fa-3x"></i
             ></a>
+            <a
+            href="https://twitter.com/mastrusimuni"
+            target="_blank"
+            aria-label="Twitter"
+            tabindex="0"
+            ><i class="fa-brands fa-square-x-twitter fa-3x"></i
+            ></a>
             <!-- <a
               href=""
               target="_blank"
@@ -84,18 +91,11 @@
               ><i class="fa-brands fa-telegram fa-3x"></i
             ></a>
             <a
-              href="https://twitter.com/mastrusimuni"
-              target="_blank"
-              aria-label="Twitter"
-              tabindex="0"
-              ><i class="fa-brands fa-twitter fa-3x"></i
-            ></a>
-            <a
               href="https://ie.linkedin.com/in/simonesusino"
               target="_blank"
               aria-label="Linkedin"
               tabindex="0"
-              ><i class="fa-brands fa-linkedin-in fa-3x"></i>
+              ><i class="fa-brands fa-linkedin fa-3x"></i>
             </a>
           </div>
         <!-- <p>with a passion for creating beautiful and interactive websites.</p> -->
@@ -104,8 +104,8 @@
       <section class="two contact">
         <h2>Thanks for visit my website!</h2>
         <p>Feel free to send me a message!</p>
-        <!-- <img src="/assets/images/about/stencil.webp" alt="Me"/> -->
-        <!-- <img src="/assets/images/logo.webp" alt="Me"/> -->
+        <!-- <img src="/assets/images/background.webp" alt="Me"/> -->
+        <!-- <img src="/assets/images/mountain.webp" alt="Me"/> -->
 
       </section>
 
