New pages added, favicons, minor changes

--- a/html/blog.html
+++ b/html/blog.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Works </title>
+    <title>Blog</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
   />
-
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
@@ -62,17 +61,21 @@
 
     </header>
       
-    <div class="main-content works">
+    <div class="main-content blog">
       <div class="navigation">
         <ul>
           <li class="nav-item one works">
-            <a href="/html/works/dimos.html">DiMOS</a>
-            <p class="subtitle">A Digital Menu Ordering System</p> 
+            <a href="/html/blog/webdev-methods.html">WebDev Methods</a>
+            <p class="subtitle">CMS, Hand Coding, and JS Frameworks: Which One is Right for You?</p> 
           </li>
           <li class="nav-item two works">
-            <a href="/html/works/butterfly.html">The Butterfly</a>
-            <p class="subtitle">A modern website for a Childcare business</p> 
+            <a href="/html/blog/webdev-process.html">WebDev Process</a>
+            <p class="subtitle">6 Essential Stages to Build a Successful Website</p> 
           </li>
+          <!-- <li class="nav-item one works">
+            <a href="/html/blog/webdev-trends.html">WebDev Trends</a>
+            <p class="subtitle">Trends in Front Web Developer</p> 
+          </li> -->
           <!-- <li class="nav-item three">
             Simone
           </li> -->
