--- a/html/contact.html
+++ b/html/contact.html
@@ -10,6 +10,10 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     >
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
   </head>
   <body>
     <header>
@@ -50,7 +54,7 @@
             <a href="/html/contact.html" aria-label="Contact">Contact</a>
           </li>
           <li tabindex="0">
-            <a href="#" aria-label="Blog">Blog</a>
+            <a href="/html/blog.html" aria-label="Blog">Blog</a>
           </li>
         </ul>
       </nav>
@@ -104,18 +108,18 @@
       <section class="two contact">
         <h2>Thanks for visit my website!</h2>
         <p>Feel free to send me a message!</p>
-        <!-- <img src="/assets/images/background.webp" alt="Me"/> -->
-        <!-- <img src="/assets/images/mountain.webp" alt="Me"/> -->
+        <!-- <img src="/assets/images/background.webp" alt="Me"/>
+        <img src="/assets/images/mountain.webp" alt="Me"/> -->
 
       </section>
 
 
-      <section class="three">
+      <section class="three contact">
         <!-- <h2>Send me a message!</h2> -->
         <div class="form">
           <div class="form-wrapper">
             <form
-              action="../form-handler.php"
+              action="/html/form-handler.php"
               method="POST"
               aria-label="Contact form"
             >
