--- a/html/thank-you.html
+++ b/html/thank-you.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
+    <title>Thank You</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link
       rel="stylesheet"
@@ -23,10 +23,9 @@
               src="/assets/images/logo.webp"
               alt="Logo with no Image"
               class="logo"
-            >
+            />
           </a>
         </div>
-
 
         <button
           class="menutoggle"
@@ -45,9 +44,7 @@
             <a href="/html/about.html" aria-label="About">About</a>
           </li>
           <li tabindex="0">
-            <a href="/html/works.html" aria-label="Works"
-              >Works</a
-            >
+            <a href="/html/works.html" aria-label="Works">Works</a>
           </li>
           <li tabindex="0">
             <a href="/html/contact.html" aria-label="Contact">Contact</a>
@@ -61,53 +58,15 @@
 
     </header>
 
-    <div class="main-content about">
-      <section class="one about">
-        <h1>I am a Frontend Web Developer</h1>
-        <p>with a passion for creating beautiful and interactive websites.</p>
-      </section>
-
-      <section class="two about image">
-        <img src="/assets/images/about/stencil.webp" alt="Me"/>
-      </section>
-
-      <section class="three">
-        <h2>About Me</h2>
-        <p>
-          Hi there! I'm Simone, a passionate and dedicated web developer with a
-          background in Information Systems and Information Technology. I am
-          thrilled to welcome you to my portfolio, where I showcase my skills,
-          projects, and experiences in the world of web development.
-        </p>
-
-        <h3>My Journey</h3>
-        <p>
-          During my academic journey, I pursued a degree in Information Systems
-          and Information Technology, where I acquired a solid foundation in
-          various aspects of computing and technology. My studies enabled me to
-          explore cutting-edge technologies and delve into the world of web
-          development.
-        </p>
-
-        <h3>Technologies and Languages</h3>
-        <p>
-          As a web developer, I thrive on staying up-to-date with the latest
-          advancements in the industry. I have hands-on experience with a range
-          of technologies, including Node.js and React, which have become
-          instrumental in building dynamic and interactive web applications. My
-          proficiency in programming languages like Python, JavaScript, HTML/CSS
-          allows me to craft seamless user experiences and design visually
-          appealing websites.
-        </p>
+    <div class="main-content">
+      <section class="one">
+        <h1 class="thank">Thank you for your message!</h1>
+        <p>I appreciate your interest and will get back to you soon.</p>
+        <p>In the meantime, feel free to explore the rest of my <a href="../index.html">website</a>.</p>
       </section>
     </div>
 
-    <!-- <script src="/assets/js/go-back.js"></script> -->
     <script src="/assets/js/hamburger.js"></script>
     <script src="/assets/js/fade.js"></script>
-    <script src="/assets/js/current-page.js"></script>
-    <script src="/assets/js/progress-bar.js"></script>
-
-
   </body>
 </html>
