--- a/html/404.html
+++ b/html/404.html
@@ -9,6 +9,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
   </head>
   <body>
     <header>
@@ -46,7 +50,7 @@
             <a href="/html/contact.html" aria-label="Contact">Contact</a>
           </li>
           <li tabindex="0">
-            <a href="#" aria-label="Blog">Blog</a>
+            <a href="/html/blog.html" aria-label="Blog">Blog</a>
           </li>
         </ul>
       </nav>
@@ -54,14 +58,14 @@
 
     </header>
 
-    <div class="main-content about">
-      <section class="one">
-        <h1>Oops! You're Lost in Cyberspace</h1>
+    <div class="main-content">
+      <section class="one error">
+        <h1>Oops! You're Lost in Cyberspace!</h1>
         <p>
           The page you're looking for seems to have vanished into the digital
           abyss.
         </p>
-        <p>How about heading back to our <a href="../index.html">homepage</a>?</p>
+        <p>How about heading back to my <a href="../index.html">homepage</a>?</p>
       </section>
     </div>
 
