--- a/html/works/butterfly.html
+++ b/html/works/butterfly.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
   </head>
   <body>
     <header>
@@ -46,7 +51,7 @@
             <a href="/html/contact.html" aria-label="Contact">Contact</a>
           </li>
           <li tabindex="0">
-            <a href="#" aria-label="Blog">Blog</a>
+            <a href="/html/blog.html" aria-label="Blog">Blog</a>
           </li>
         </ul>
       </nav>
@@ -223,8 +228,8 @@
           />
         </div>
 
-        <p style="font-weight: bolder">
-          Website availalbe at:
+        <p>
+          Website available at:
           <a
             href="https://www.simonesusino.com/butterflychildcare"
             target="_blank"
