--- a/index.html
+++ b/index.html
@@ -5,21 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homepage</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
   </head>
   <body id="home">
     <div class="main-content">
       <div class="navigation">
         <ul>
-          <li class="nav-item one">
+          <li class="nav-item one home">
             Hello<span class="comma">,</span>
           </li>
-          <li class="nav-item two">
+          <li class="nav-item two home">
             I am
           </li>
-          <li class="nav-item three">
+          <li class="nav-item three home">
             Simone
           </li>
-          <li class="nav-item four">
+          <li class="nav-item four home">
           </li>
         </ul>
       </div>
